--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "wpm-project",
   "version": "0.0.0",
-  "description": "WPM Project", 
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "^1.10.1",
@@ -17,12 +16,9 @@
   },
   "main": "app.js",
   "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dishmitha/wpm_project.git"
-  },
+  "repository": "git+https://github.com/dishmitha/wpm_project.git",
   "keywords": [],
-  "author": "Dishmitha",
+  "author": "<dishmthamiryala@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dishmitha/wpm_project/issues"
